--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <section id="menu" class="menu">
     <h1>Pilih Materi</h1>
     <div class="card-container">
-      <div class="card" onclick="openPDF('sel.pdf')">Sel & Struktur Makhluk Hidup</div>
+      <div class="card" onclick="openPDF('cerita seru.pdf')">Sel & Struktur Makhluk Hidup</div>
       <div class="card" onclick="openPDF('gaya.pdf')">Gaya & Energi</div>
       <div class="card" onclick="openPDF('cahaya.pdf')">Cahaya & Gelombang</div>
     </div>
