--- a/index.html
+++ b/index.html
@@ -2,123 +2,157 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IPA: The Untold Stories</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
+    * {
+      box-sizing: border-box;
       margin: 0;
-      background: #f9f9f9;
-      color: #333;
-    }
-    .landing, .menu, .viewer {
-      display: none;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    .active {
-      display: block;
-    }
-    h1 {
-      font-size: 2.2rem;
-      margin-bottom: 20px;
+      padding: 0;
     }
 
-    .card-container {
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: #fdfdfd;
+      color: #333;
+    }
+
+    /* Landing Page */
+    .landing {
+      height: 100vh;
+      background: linear-gradient(135deg, #90e0ef, #00b4d8);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      padding: 2rem;
+    }
+
+    .landing h1 {
+      font-size: 3rem;
+      color: white;
+      margin-bottom: 1rem;
+    }
+
+    .landing button {
+      padding: 12px 20px;
+      font-size: 1rem;
+      background: #fff;
+      color: #00b4d8;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+    }
+
+    /* Card Menu */
+    .menu {
+      display: none;
+      padding: 2rem 1rem;
       display: flex;
       flex-wrap: wrap;
+      gap: 1rem;
       justify-content: center;
-      gap: 20px;
     }
 
     .card {
+      width: 280px;
       background: white;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      padding: 20px;
-      width: 250px;
       border-radius: 12px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
+      padding: 1.5rem;
+      text-align: center;
       cursor: pointer;
+      transition: transform 0.2s ease;
     }
 
     .card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 6px 16px rgba(0,0,0,0.15);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
     }
 
-    .pdf-container {
-      position: relative;
-      width: 100%;
-      padding-bottom: 141%;
-      height: 0;
-      overflow: hidden;
-      margin-top: 20px;
+    .card h3 {
+      font-size: 1.2rem;
+      color: #0077b6;
     }
 
-    .pdf-container iframe {
-      position: absolute;
+    /* Fullscreen PDF Viewer */
+    .pdf-fullscreen {
+      position: fixed;
       top: 0; left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 99;
+      background: #fff;
+      display: none;
+    }
+
+    .pdf-fullscreen iframe {
       width: 100%;
       height: 100%;
       border: none;
     }
 
-    .btn {
-      background: #333;
+    .btn-exit {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      background: #0077b6;
       color: white;
-      padding: 10px 20px;
       border: none;
+      padding: 10px 14px;
       border-radius: 8px;
+      z-index: 100;
+      font-weight: bold;
       cursor: pointer;
-      margin-top: 20px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Halaman Landing -->
-  <section id="landing" class="landing active">
+  <!-- Landing -->
+  <div class="landing" id="landing">
     <h1>IPA: The Untold Stories</h1>
-    <button class="btn" onclick="showMenu()">Masuk</button>
-  </section>
+    <button onclick="showMenu()">Mulai Belajar</button>
+  </div>
 
-  <!-- Halaman Menu Materi -->
-  <section id="menu" class="menu">
-    <h1>Pilih Materi</h1>
-    <div class="card-container">
-      <div class="card" onclick="openPDF('cerita seru.pdf')">Sel & Struktur Makhluk Hidup</div>
-      <div class="card" onclick="openPDF('gaya.pdf')">Gaya & Energi</div>
-      <div class="card" onclick="openPDF('cahaya.pdf')">Cahaya & Gelombang</div>
+  <!-- Menu Cards -->
+  <div class="menu" id="menu">
+    <div class="card" onclick="openFullscreenPDF('cerita seru.pdf')">
+      <h3>Gaya dan Gerak</h3>
     </div>
-  </section>
+    <div class="card" onclick="openFullscreenPDF('sel.pdf')">
+      <h3>Sel & Struktur Makhluk Hidup</h3>
+    </div>
+    <div class="card" onclick="openFullscreenPDF('getaran.pdf')">
+      <h3>Getaran dan Gelombang</h3>
+    </div>
+  </div>
 
-  <!-- Viewer PDF -->
-  <section id="viewer" class="viewer">
-    <h1 id="judulMateri">Materi</h1>
-    <div class="pdf-container">
-      <iframe id="pdfFrame" src=""></iframe>
-    </div>
-    <button class="btn" onclick="backToMenu()">Kembali ke Menu</button>
-  </section>
+  <!-- Fullscreen PDF Viewer -->
+  <div class="pdf-fullscreen" id="pdfViewer">
+    <button class="btn-exit" onclick="closePDF()">← Kembali</button>
+    <iframe id="pdfFrame" src=""></iframe>
+  </div>
 
   <script>
     function showMenu() {
-      document.getElementById('landing').classList.remove('active');
-      document.getElementById('menu').classList.add('active');
+      document.getElementById('landing').style.display = 'none';
+      document.getElementById('menu').style.display = 'flex';
     }
 
-    function openPDF(file) {
-      document.getElementById('menu').classList.remove('active');
-      document.getElementById('viewer').classList.add('active');
-      document.getElementById('pdfFrame').src = file;
-      document.getElementById('judulMateri').textContent = file.replace('.pdf', '').toUpperCase();
+    function openFullscreenPDF(url) {
+      document.getElementById("pdfViewer").style.display = "block";
+      document.getElementById("pdfFrame").src = url;
+      document.getElementById("menu").style.display = "none";
     }
 
-    function backToMenu() {
-      document.getElementById('viewer').classList.remove('active');
-      document.getElementById('menu').classList.add('active');
-      document.getElementById('pdfFrame').src = "";
+    function closePDF() {
+      document.getElementById("pdfViewer").style.display = "none";
+      document.getElementById("pdfFrame").src = "";
+      document.getElementById("menu").style.display = "flex";
     }
   </script>
 
